# m537_voice_gateway

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
_docs/architecture/: ARCH_M537_VOICE_GATEWAY_v1.0.md
_docs/audit/: AUDIT_M537_v1.0.0_20240329.md
_docs/lessons-learned/: LESSONS_M537_v1.0.0_20240329.md
_docs/milestones/: MILESTONE_v1.0.0_20240329_001.md
_docs/sop/: SOP_ENTERPRISE_API_20240329_v1.0.md
_ref_input/: ._M537_VOICE_ECOSYSTEM_GATEWAY_MASTER_PLAN.md  M537_VOICE_ECOSYSTEM_GATEWAY_MASTER_PLAN.md
backend/: analytics.py  auth.py  circuit_breaker.py  error_tracking.py  graceful_shutdown.py  logging_config.py  main.py  requirements.txt  settings.py  tracing.py  webhooks.py
backend/config/: __init__.py  intent_rules.py  project_id_patterns.py  tool_registry.py
backend/middleware/: __init__.py  rate_limiter.py  security.py
backend/routes/: __init__.py  admin.py  analytics.py  health.py  metrics.py  monitoring.py  voice.py  webhooks.py  websocket.py
backend/services/: __init__.py  audit_logger.py  cache.py  i18n.py  intent_parser.py  llm_assistant.py  project_id_normalizer.py  query_executor.py  response_builder.py  scheduler.py  session_manager.py
backend/tools/: __init__.py  base_tool.py  count_projects.py  cron_jobs.py  disk_usage.py  get_project_summary.py  git_status.py  list_containers.py  list_ports.py  list_tmux.py  network_info.py  p0_health_check.py  process_list.py  recent_errors.py  recent_updates.py  scan_missing_readme.py  service_logs.py  system_status.py  uptime_info.py
cli/: m537.py
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  EXTENSION.md  TROUBLESHOOTING.md
frontend/: index.html  manifest.json  sw.js
frontend/js/: app.js  (+9 more)
monitoring/: alerts.yml  docker-compose.monitoring.yml  grafana-dashboard.json  prometheus.yml
scripts/: api_test.sh  benchmark.py  deploy.sh  generate_clients.py  health_check.sh  load_test.py  m537-cli.py  security_test.sh  setup_tunnel.sh
tests/: __init__.py  conftest.py  locustfile.py  test_admin.py  test_analytics_webhooks.py  test_api.py  test_cache_logging.py  test_enterprise_features.py  test_i18n.py  test_integration.py  test_intent_parser.py  test_llm_assistant.py  test_mobile_pwa.py  test_new_tools.py  test_observability.py  test_performance.py  test_rate_limiter.py  test_security.py  test_tools.py  test_v1_api.py
(+19 files in other folders)
